package com.example.linebot.replier;

import com.linecorp.bot.model.message.Message;

interface IReply {
    Message reply();
}
