package com.example.linebot.utils;

public interface ISubject {
    String getPeriod();

    String getDotw();

    String replyMessage();
}
